--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build/**/*"
   ],
   "scripts": {
-    "build": "babel src --out-dir build --copy-files --extensions '.ts,.js'",
-    "dev": "tsnd src/index.ts",
+    "build": "babel server --out-dir build --copy-files --extensions '.ts,.js'",
+    "dev": "tsnd server/index.ts",
     "test": "jest --coverage",
     "check": "tsc"
   },
@@ -23,15 +23,15 @@
     "axios": "^0.21.1",
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "keyv": "^4.0.3",
-    "sequelize": "^6.6.2",
-    "sqlite3": "^5.0.2",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/ejs": "^3.0.6",
     "@types/keyv": "^3.1.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
